Fix overflow bug

--- a/src/sass/nav.sass
+++ b/src/sass/nav.sass
@@ -35,7 +35,7 @@ nav
     font-weight: 400
     margin-left: 10px
 
-  @media (max-width: 760px)
+  @media (max-width: 780px)
     li.title
       display: none
 
